# Basic-OpenGL-Project

./: CMakeLists.txt  README.md  imgui.ini
include/: camera.hpp  functiontypes.hpp  glwindow.hpp  indexbuffer.hpp  meshloader.hpp  model.hpp  scene.hpp  sceneobject.hpp  shaderfile.hpp  shadermanager.hpp  shaderprogram.hpp  texturemanager.hpp  transform.hpp  vertexarrayobject.hpp  vertexbuffer.hpp  viewport.hpp
include/glad/: glad.h
meshes/: cube.mesh  ucgenler.mesh
models/: Circle_UnlitTextured.json  Cone_UnlitTextured.json  Cube_UnlitTextured.json  Cube_UnlitTextured1.json  Cylinder_UnlitTextured.json  Pyramid_UnlitTextured.json  ground.json  wall.json
shaders/: UnlitTexturedShader.json
shaders/UnlitTexturedShader/: unlittextureshader_fragment.glsl  unlittextureshader_vertex.glsl
src/: camera.cpp  glad.c  glwindow.cpp  indexbuffer.cpp  main.cpp  meshloader.cpp  model.cpp  scene.cpp  sceneobject.cpp  shaderfile.cpp  shadermanager.cpp  shaderprogram.cpp  texturemanager.cpp  transform.cpp  vertexarrayobject.cpp  vertexbuffer.cpp  viewport.cpp
